5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1789_1619.log
== TEST (2019-05-29 18:48:49) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho": )))
modos = array(eval(input("modos de banho: ")))
print(modos)
-- ERROR:
File "XXXX", line 2
    tempo = array(eval(input("tempo no banho": )))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:59) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:25) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:23) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:50) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: "))).upper()
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:05) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: "))).upper()
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:27) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:42) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:50) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos.)
-- ERROR:
File "XXXX", line 4
    print(modos.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:56) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
print(modos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:34) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = "QUENTE"):
	print("acb")
-- ERROR:
File "XXXX", line 4
    if(modos = "QUENTE"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:54) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = "QUENTE"):
	print("acb")
else:
	print("eu")
-- ERROR:
File "XXXX", line 4
    if(modos = "QUENTE"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:06) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = QUENTE):
	print("acb")
else:
	print("eu")
-- ERROR:
File "XXXX", line 4
    if(modos = QUENTE):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:17) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = quente):
	print("acb")
else:
	print("eu")
-- ERROR:
File "XXXX", line 4
    if(modos = quente):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:37) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos == quente):
	print("acb")
else:
	print("eu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:01) 
-- CODE:
from numpy import*
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos == quente):
	print("acb")
else:
	print("eu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:37) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = q ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = q ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:48) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = "q" ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = "q" ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:49) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = "q" ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = "q" ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:49) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = "q" ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = "q" ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:57) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = 'q' ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = 'q' ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:58:08) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = array(eval(input("modos de banho: ")))
if(modos = 15 ):
	print( gastos  * tempo )
else:
	print("eu")
-- ERROR:
File "XXXX", line 5
    if(modos = 15 ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:15) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = array(eval(input("tempo no banho:" )))
modos = int(input("modos de banho: ")))
if(modos = 15 ):

-- ERROR:
File "XXXX", line 4
    modos = int(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:27) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = int(input("tempo no banho:" )))
modos = int(input("modos de banho: ")))
if(modos = 15 ):

-- ERROR:
File "XXXX", line 3
    tempo = int(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:32) 
-- CODE:
from numpy import*
gasto = 0.005
tempo = int(input("tempo no banho:" ))
modos = int(input("modos de banho: "))
if(modos = 15 ):

-- ERROR:
File "XXXX", line 5
    if(modos = 15 ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
